Add swagger comments for oracle API
